--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li>shvedalex16@gmail.com</li>
           <li>Discord: shvedulia#2733</li>
           <li>
-            <a href="https://github.com/Shvedulia/rsschool-cv">
+            <a href="https://github.com/Shvedulia">
               GitHub: shvedulia
             </a>
           </li>
