fix: update code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <code>
             const arr = [1, 2, 3, 4, 5];
 
-            const result = arr.reduce((sum, current) => sum + current, 0);
+            const result = arr.reduce(function (sum, current){ return sum + current, 0});
           </code>
         </pre>
       </section>
